--- a/src/main/resources/static/css/message/list.css
+++ b/src/main/resources/static/css/message/list.css
@@ -375,7 +375,6 @@ header {
     margin-top: 70px;
 }
 
-
 /* Footer CSS ===============================================================================================================================================================*/
 footer {
     border: 1px solid #eaecee;
@@ -664,7 +663,11 @@ footer {
     word-break: keep-all;
 }
 
-.right-box-friend-box {}
+.right-box-friend-box {
+    border-radius: 4px;
+    display: flex !important;
+    flex-direction: row;
+}
 
 .right-box-friend {
     border-radius: 4px;
@@ -796,7 +799,7 @@ footer {
     width:312px;
     padding : 6px 0 6px;
     font-weight: normal;
-    text-align: left;
+    text-align: center;
 }
 
 .message-nickname{
@@ -873,4 +876,61 @@ footer {
 
 .btn-grid:last-child {
     margin-right: 0;
+}
+
+div#paging-wrap {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+    text-align: center;
+}
+
+a.paging {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+}
+
+a.paging-checked {
+    color: #2A7DE1;
+    font-weight: 700;
+}
+
+a.paging-move {
+    margin: 0px 10px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.sidebar-profile-img {
+    width: 68px;
+    height: 68px;
+}
+
+.none {
+    margin-top: 150px;
+    padding: 40px 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.none-font1 {
+    color: rgb(89, 95, 99);
+    text-align: center;
+    font-weight: 600;
+    font-size: 16px;
+    letter-spacing: .02em;
+    line-height: 25px;
+}
+
+.none-font2 {
+    color: rgb(148, 155, 160);
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: 4px;
 }
