--- a/src/main/resources/templates/message/received-detail.html
+++ b/src/main/resources/templates/message/received-detail.html
@@ -65,7 +65,9 @@
                                     </button>
                                 </div>
                             </div>
-                            <button class="to-post-write">게시글 작성</button>
+                            <a href="/general-community/write">
+                                <button class="to-post-write">게시글 작성</button>
+                            </a>
                             <div class="search-bar">
                                 <input type="text" autocomplete="off" placeholder="친구이름을 입력해보세요"
                                     class="search-input search-second">
@@ -100,35 +102,33 @@
                         <div class="right-box-big">
                             <div class="right-box-middle">
                                 <div class="right-box-small">
-                                    <div class="right-box-friend-box" th:object="${messageDTO}">
+                                    <div class="right-box-friend-box">
                                         <div class="right-box-friend"
                                              style="background-color: rgb(252,252,252); padding: 4px 0px">
                                             <div class="right-box-name">
-                                                <div class="nickname" th:text="*{memberNickname}">삼장법사</div>
-                                                <div class="date" th:text="*{messageCreateTime}">2023.01.02</div>
+                                                <div class="nickname" th:text="${messageReceived.memberNickname}"></div>
+                                                <div class="date" th:text="${messageReceived.messageCreateTime}"></div>
                                             </div>
                                         </div>
                                         <table class="right-box-friend title">
                                             <td class="label">
                                                 제목
                                             </td>
-                                            <td class="value" th:text="*{messageTitle}">
-                                                도를 믿으시나요? 당신 곁에 신이 있습니다.
-                                            </td>
+                                            <td class="value" th:text="${messageReceived.messageTitle}"></td>
                                         </table>
                                         <table class="right-box-friend detail">
                                             <td class="label detail">
                                                 내용
                                             </td>
-                                            <td class="value detail" th:text="*{messageContent}">
-                                                관상이 좋아보이네. 이번 기회에 저희 교를 믿으시면서 그 느낌 그대로 그 행복 영원토록 지니고 삶을 산다면 좋겠습니다. 답장을 주거든 전화번호를 남겨줄 터이니 관심이 있거든 답을 주시게나.
-                                            </td>
+                                            <td class="value detail" th:text="${messageReceived.messageContent}"></td>
                                         </table>
                                         <div class="right-box-friend command"
                                              style="background-color: rgb(252,252,252); padding: 4px 0px">
-                                            <button class="send-btn">
-                                                <div class="enter-button-icon">답장</div>
-                                            </button>
+                                            <a th:href="'/message/write?memberNickname=' + ${messageReceived.memberNickname}">
+                                                <button class="send-btn">
+                                                    <div class="enter-button-icon">답장</div>
+                                                </button>
+                                            </a>
                                             <button class="delete-btn">
                                                 <div class="enter-button-icon">삭제</div>
                                             </button>
@@ -145,5 +145,4 @@
 </div>
 <footer th:replace="~{main/footer :: footer}"></footer>
 </body>
-
 </html>
