모임게시글 50%

--- a/src/main/resources/templates/meeting-community/posts.html
+++ b/src/main/resources/templates/meeting-community/posts.html
@@ -52,7 +52,9 @@
                         </section>
                         <button class="to-mypage">마이페이지</button>
                     </div>
-                    <button class="to-post-write">게시글 작성</button>
+                    <a href="/meeting-community/write">
+                        <button class="to-post-write">게시글 작성</button>
+                    </a>
                     <form class="region-select-container" action="" name="region-select">
                         <div class="capital-region-container">
                             <div class="region-select-row">
