10월10일 임준영 PR

--- a/src/main/resources/templates/friend/search.html
+++ b/src/main/resources/templates/friend/search.html
@@ -66,7 +66,7 @@
                 </div>
                 <button th:onclick="|location.href='@{/general-community/write}'|" class="to-post-write">게시글 작성</button>
                 <div class="search-bar">
-                    <input type="text" autocomplete="off" placeholder="친구이름을 입력해보세요"
+                    <input id="searchFriend" type="text" autocomplete="off" placeholder="친구이름을 입력해보세요"
                            class="search-input search-second">
                     <div class="input-erase-btn">
                         <svg data-v-bd9f2bcc="" data-v-02656bf6="" width="16" height="16" viewBox="0 0 16 16"
