--- a/src/main/resources/static/css/friend/friend-list.css
+++ b/src/main/resources/static/css/friend/friend-list.css
@@ -888,3 +888,13 @@ footer {
     line-height: 15px;
 }
 
+.update-container-img {
+    width: 40px;
+    height: 40px;
+    background-size: 100% 100%;
+    line-height: 68px;
+    border: 1px solid #e1e4e6;
+    border-radius: 100%;
+    display: block;
+    cursor: pointer;
+}
